# Mercury

./: .gitignore  CMakeLists.txt  LICENSE  README.md
VsPlugin/: G6IdlToCpp.sln
VsPlugin/G6IdlToCpp/: G6IdlToCpp.csproj  G6IdlToCppPackage.cs  G6IdlToCppPackage.vsct  idlToCpp.cs  source.extension.vsixmanifest
VsPlugin/G6IdlToCpp/Properties/: AssemblyInfo.cs
VscodePlugin/: CHANGELOG.md  README.md  g6idl.language.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
VscodePlugin/client/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
VscodePlugin/client/src/: extension.js  extension.js.map  extension.ts
VscodePlugin/server/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
VscodePlugin/server/src/: server.js  server.js.map  server.ts
abi_interface_generator/: CMakeLists.txt  analysis_action.cpp  analysis_result.hpp  analysis_visitor.cpp  fundamental_error.hpp  interface_generator.cpp  uuid.cpp  uuid.hpp
app/: CMakeLists.txt  main.cpp
cxxopts/: cxxopts.hpp  cxxopts_extension.hpp
data/: field.json  function_template.hpp  impl_template.hpp  interface_template.hpp  predefined.hpp
idl_file/: Image.h  Object.h  PixPoint.h  Widget.h
include/: interface_generator.h
src/: CMakeLists.txt  analysis_action.h  analysis_consumer.cpp  analysis_consumer.h  analysis_result.hpp  analysis_visitor.h  interface_generator.cpp
test/: CMakeLists.txt  test.cpp
